fix menu height on mobile

--- a/admin_menu/sass/admin-menu.scss
+++ b/admin_menu/sass/admin-menu.scss
@@ -32,7 +32,7 @@ body {
 #admin_menu_container {
   background-color: $primary-color;
   padding: 10px 40px 0 40px;
-  height: 40px;
+  min-height: 40px;
 
   .tabs {
     clear: left;
